# nuclear-data-reader

./: .clang-tidy  .codacy.yml  .codespellrc  .gitignore  .gitlab-ci.yml  .lgtm.yml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  INSTALL.md  README.md  TODO.md  appveyor.yml
.circleci/: config.yml
.github/workflows/: cmake_build.yml  codeql-analysis.yml  linux.yml  macos.yml  windows.yml
cmake/: CodeCoverage.cmake  CompilerWarnings.cmake  Doxygen.cmake  ExternalLibraries.cmake  GeneralProjectSettings.cmake  Sanitizers.cmake  StaticAnalyzers.cmake
data/1983/: mass.mas83  rct1.mas83  rct2.mas83
data/1993/: mass_exp.mas93  mass_rmd.mas93  rct1_exp.mas93  rct1_rmd.mas93  rct2_exp.mas93  rct2_rmd.mas93  rct3_rmd.mas93
data/1995/: mass_exp.mas95  mass_rmd.mas95  nubtab97.asc  rct1_exp.mas95  rct1_rmd.mas95  rct2_exp.mas95  rct2_rmd.mas95
docs/: Doxyfile.in
example/: CMakeLists.txt  README.md  ndr.cpp
include/nuclear-data-reader/: CMakeLists.txt  ame_data.hpp  ame_line_position.hpp  ame_mass_position.hpp  ame_reaction1_position.hpp  ame_reaction2_position.hpp  converter.hpp  isotope.hpp  massTable.hpp  nubase_data.hpp  nubase_line_position.hpp  number.hpp  version.hpp.in
scripts/: build_example.sh  code_check.sh  common_functions.sh  run_all_presets.sh
src/: ame_data.cpp  converter.cpp  isotope.cpp  massTable.cpp  nubase_data.cpp
tests/: CMakeLists.txt  ame_data_test.cpp  converter_test.cpp  isotope_test.cpp  massTable_test.cpp  nubase_data_test.cpp
